--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -1659,7 +1659,7 @@
     "    axis=1\n",
     ")\n",
     "\n",
-    "claims.to_csv('preprocessed_data/claims_db.csv')\n",
+    "claims.to_csv('preprocessed_data/claims_db.csv', index=False)\n",
     "\n",
     "string_columns = claims.select_dtypes(include='object').columns.drop([\"assessment_type\", \"journal_name\", \"primary_affiliation\"])\n",
     "claims_truncated = claims.copy()\n",
@@ -2463,7 +2463,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_47022/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_80834/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  authors.loc[authors[\"sex\"] == 1, \"sex\"] = \"Male\"\n"
      ]
     },
@@ -3119,6 +3119,11 @@
     "# replace all Promislow D with Promislow DE and promislow d with promilsow de,\n",
     "authors.loc[authors[\"author_key\"] == \"promislow d\", \"name\"] = \"Promislow DE\"\n",
     "authors.loc[authors[\"author_key\"] == \"promislow d\", \"author_key\"] = \"promislow de\"\n",
+    "\n",
+    "# correct hoffmann ja as PI instead of Engineer / Technician\n",
+    "authors.loc[(authors[\"author_key\"] == \"hoffmann ja\") & (authors[\"career_stage\"] == \"Engineer / Technician\"), \"career_stage\"] = \"Senior PI\"\n",
+    "\n",
+    "authors = authors.drop(columns=[\"sex\"]) # This is in the excel files\n",
     "authors.to_csv('preprocessed_data/authors_db.csv', index=False)"
    ]
   },
@@ -3151,7 +3156,6 @@
        "      <th>author_id</th>\n",
        "      <th>article_id</th>\n",
        "      <th>name</th>\n",
-       "      <th>sex</th>\n",
        "      <th>leading_author</th>\n",
        "      <th>first_author</th>\n",
        "      <th>career_stage</th>\n",
@@ -3165,7 +3169,6 @@
        "      <td>12</td>\n",
        "      <td>3096</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3177,7 +3180,6 @@
        "      <td>22</td>\n",
        "      <td>3015</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3189,7 +3191,6 @@
        "      <td>44</td>\n",
        "      <td>2593</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3201,7 +3202,6 @@
        "      <td>58</td>\n",
        "      <td>3052</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3213,7 +3213,6 @@
        "      <td>141</td>\n",
        "      <td>3141</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3225,7 +3224,6 @@
        "      <td>143</td>\n",
        "      <td>2891</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3237,7 +3235,6 @@
        "      <td>179</td>\n",
        "      <td>3011</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3249,7 +3246,6 @@
        "      <td>195</td>\n",
        "      <td>2945</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3261,7 +3257,6 @@
        "      <td>199</td>\n",
        "      <td>2978</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3273,7 +3268,6 @@
        "      <td>203</td>\n",
        "      <td>2849</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3285,7 +3279,6 @@
        "      <td>211</td>\n",
        "      <td>3047</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3297,10 +3290,9 @@
        "      <td>353</td>\n",
        "      <td>2976</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>Engineer / Technician</td>\n",
+       "      <td>Senior PI</td>\n",
        "      <td>Experienced</td>\n",
        "      <td>hoffmann ja</td>\n",
        "    </tr>\n",
@@ -3309,7 +3301,6 @@
        "      <td>357</td>\n",
        "      <td>3014</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3321,7 +3312,6 @@
        "      <td>355</td>\n",
        "      <td>3034</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3333,7 +3323,6 @@
        "      <td>476</td>\n",
        "      <td>2963</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3345,7 +3334,6 @@
        "      <td>480</td>\n",
        "      <td>3004</td>\n",
        "      <td>Hoffmann JA</td>\n",
-       "      <td>Male</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>Senior PI</td>\n",
@@ -3357,41 +3345,41 @@
        "</div>"
       ],
       "text/plain": [
-       "     author_id  article_id         name   sex  leading_author  first_author  \\\n",
-       "10          12        3096  Hoffmann JA  Male            True         False   \n",
-       "19          22        3015  Hoffmann JA  Male            True         False   \n",
-       "35          44        2593  Hoffmann JA  Male            True         False   \n",
-       "46          58        3052  Hoffmann JA  Male            True         False   \n",
-       "133        141        3141  Hoffmann JA  Male            True         False   \n",
-       "135        143        2891  Hoffmann JA  Male            True         False   \n",
-       "170        179        3011  Hoffmann JA  Male            True         False   \n",
-       "185        195        2945  Hoffmann JA  Male            True         False   \n",
-       "188        199        2978  Hoffmann JA  Male            True         False   \n",
-       "209        203        2849  Hoffmann JA  Male            True         False   \n",
-       "237        211        3047  Hoffmann JA  Male            True         False   \n",
-       "344        353        2976  Hoffmann JA  Male            True         False   \n",
-       "345        357        3014  Hoffmann JA  Male            True         False   \n",
-       "351        355        3034  Hoffmann JA  Male            True         False   \n",
-       "463        476        2963  Hoffmann JA  Male            True         False   \n",
-       "470        480        3004  Hoffmann JA  Male            True         False   \n",
+       "     author_id  article_id         name  leading_author  first_author  \\\n",
+       "10          12        3096  Hoffmann JA            True         False   \n",
+       "19          22        3015  Hoffmann JA            True         False   \n",
+       "35          44        2593  Hoffmann JA            True         False   \n",
+       "46          58        3052  Hoffmann JA            True         False   \n",
+       "133        141        3141  Hoffmann JA            True         False   \n",
+       "135        143        2891  Hoffmann JA            True         False   \n",
+       "170        179        3011  Hoffmann JA            True         False   \n",
+       "185        195        2945  Hoffmann JA            True         False   \n",
+       "188        199        2978  Hoffmann JA            True         False   \n",
+       "209        203        2849  Hoffmann JA            True         False   \n",
+       "237        211        3047  Hoffmann JA            True         False   \n",
+       "344        353        2976  Hoffmann JA            True         False   \n",
+       "345        357        3014  Hoffmann JA            True         False   \n",
+       "351        355        3034  Hoffmann JA            True         False   \n",
+       "463        476        2963  Hoffmann JA            True         False   \n",
+       "470        480        3004  Hoffmann JA            True         False   \n",
        "\n",
-       "              career_stage expertise_level   author_key  \n",
-       "10               Senior PI     Experienced  hoffmann ja  \n",
-       "19               Senior PI     Experienced  hoffmann ja  \n",
-       "35               Senior PI     Experienced  hoffmann ja  \n",
-       "46               Senior PI     Experienced  hoffmann ja  \n",
-       "133              Senior PI     Experienced  hoffmann ja  \n",
-       "135              Senior PI     Experienced  hoffmann ja  \n",
-       "170              Senior PI     Experienced  hoffmann ja  \n",
-       "185              Senior PI     Experienced  hoffmann ja  \n",
-       "188              Senior PI     Experienced  hoffmann ja  \n",
-       "209              Senior PI     Experienced  hoffmann ja  \n",
-       "237              Senior PI     Experienced  hoffmann ja  \n",
-       "344  Engineer / Technician     Experienced  hoffmann ja  \n",
-       "345              Senior PI     Experienced  hoffmann ja  \n",
-       "351              Senior PI     Experienced  hoffmann ja  \n",
-       "463              Senior PI     Experienced  hoffmann ja  \n",
-       "470              Senior PI     Experienced  hoffmann ja  "
+       "    career_stage expertise_level   author_key  \n",
+       "10     Senior PI     Experienced  hoffmann ja  \n",
+       "19     Senior PI     Experienced  hoffmann ja  \n",
+       "35     Senior PI     Experienced  hoffmann ja  \n",
+       "46     Senior PI     Experienced  hoffmann ja  \n",
+       "133    Senior PI     Experienced  hoffmann ja  \n",
+       "135    Senior PI     Experienced  hoffmann ja  \n",
+       "170    Senior PI     Experienced  hoffmann ja  \n",
+       "185    Senior PI     Experienced  hoffmann ja  \n",
+       "188    Senior PI     Experienced  hoffmann ja  \n",
+       "209    Senior PI     Experienced  hoffmann ja  \n",
+       "237    Senior PI     Experienced  hoffmann ja  \n",
+       "344    Senior PI     Experienced  hoffmann ja  \n",
+       "345    Senior PI     Experienced  hoffmann ja  \n",
+       "351    Senior PI     Experienced  hoffmann ja  \n",
+       "463    Senior PI     Experienced  hoffmann ja  \n",
+       "470    Senior PI     Experienced  hoffmann ja  "
       ]
      },
      "execution_count": 28,
