now able to run with everything fixed

--- a/preprocess_db.ipynb
+++ b/preprocess_db.ipynb
@@ -1155,7 +1155,13 @@
       "13941\n",
       "13299\n",
       "['article_id', 'assertion_type_id', 'assessment_type_id']\n",
-      "['article_id', 'assertion_type_id', 'assessment_type_id']\n",
+      "['article_id', 'assertion_type_id', 'assessment_type_id']\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['article_id']\n"
      ]
     }
@@ -2463,7 +2469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_80834/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/pj/15hxgl0j1wg2w_t5k7bvnq5c0000gn/T/ipykernel_56659/4002741855.py:10: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Male' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  authors.loc[authors[\"sex\"] == 1, \"sex\"] = \"Male\"\n"
      ]
     },
